# rustgpu-test

./: Cargo.toml  README.md
app/: Cargo.toml  build.rs
app/src/: fractal.rs  main.rs  simple_compute.rs  simple_graphics.rs  simple_window.rs
app/src/engine/: mod.rs  vec.rs
shaders/: Cargo.toml
shaders/fractal/: Cargo.toml
shaders/fractal/src/: lib.rs
shaders/simple_compute/: Cargo.toml
shaders/simple_compute/src/: lib.rs
shaders/simple_graphics/: Cargo.toml
shaders/simple_graphics/src/: lib.rs
shaders/src/: lib.rs  simple.rs  simple2.rs
shared/: Cargo.toml
shared/src/: lib.rs
