[workspace]
members = ["app",
    "shaders/simple_compute",
    "shaders/fractal",
    "shaders/simple_graphics"
]


# [package]
# name = "rustgpumytest"
# version = "0.1.0"
# edition = "2021"

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# # [lib]
# # crate-type = ["dylib"]

# [dependencies]

# [build-dependencies]
# spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }
# # spirv-builder = { path = "../rust-gpu" }

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3