[package]
name = "simple_compute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
# rustgpu-test-shared = { path = "../shared" }
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", features = ["glam"] }
